[package]
name = "coarse-prof"
version = "0.2.4"
authors = ["Leonard Dahlmann <leo.dahlmann@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Tiny library for coarse-grained hierarchical profiling"
homepage = "https://github.com/leod/coarse-prof"
documentation = "https://docs.rs/coarse-prof"
repository = "https://github.com/leod/coarse-prof"
keywords = ["profiling", "instrumentation"]
readme = "README.md"

[dependencies]
log = "0.4"
instant = "0.1"
