[package]
name = "coarse-prof"
version = "0.2.5"
authors = ["leod <subtle.frustration@proton.me>"]
edition = "2018"
license = "MIT"
description = "Tiny library for coarse-grained hierarchical profiling"
homepage = "https://github.com/leod/coarse-prof"
documentation = "https://docs.rs/coarse-prof"
repository = "https://github.com/leod/coarse-prof"
keywords = ["profiling", "instrumentation"]
readme = "README.md"

[dependencies]
instant = "0.1"
tabular = "0.1"